--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-
-    <div class="container">
-        <input type="text" placeholder="">
+  </head>
+  <body>
+    <div>
+      <div><input type="text" /></div>
+      <div></div>
     </div>
-    
-</body>
+  </body>
 </html>
