Create Dashboard Menu.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div>
-      <div><input type="text" /></div>
-      <div></div>
-    </div>
+    <img
+      src="https://s3-alpha-sig.figma.com/img/db44/172b/b318149c7f549c6fc9c884e9370c806f?Expires=1601251200&Signature=Ov5RhwMuGbsCiKxyRztZRNgIS-AykfhcH7sZ5GDhUFEomEZux0xbN8zkBW0jeRVSWNBJ9zTLW8Olbbiwo7XTXyzrhNkxxHNcrRdAii4IXjjK4Uiiejg~BTyAGz~T6RjlKUPQQMZgs4cf0Bt3K6-eUA4B94d0BqlTLYy-fmEy~CcCX7VeA8B6PCnr81JhsE8f62XJ~dL8Q-casr7uL5dfJB9F7gp4B~nMYu4IUekFBm-IV-JSzDLLfSYP8C~a3M5gTK8j7rnXQ5DONNKK-WYsoVGgJ9A0nKHLs-9RjxRazMBLStjyynguUIhzg7bGTDfuvfymIAPA6b0Dey3Xjj7MRg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
+      alt=""
+      srcset=""
+    />
+    <img
+      src="https://s3-alpha-sig.figma.com/img/0253/68e5/c034d6526d38685ebd1c9f3d74b6819a?Expires=1601251200&Signature=eUXOezZxnd0UYPbxLSkyjxonVcKleqjl8Raq7BIFNI6uqv30MQBBtn5XVWunu6OAaPzIAtgjeM~3e5Fl~Ttp1Far2HW-7k3RR1AV94cYVDhCaJGUPSt326KrIoIBKAoGLVbg40PIvlVVQmGX81TTDnN47SC6fypMk14M3zlhSjnXBNZxMovl1ElF~vncFgroMeHL9WOtLizhMqV2AXH1~fVMMSQhM3WjzilHakt3UXnUmOXysnFYwapXyx0EXcorrRDZWO~nbGbx9u9bk6xYmuVBj8cY8Bctx-zNALI6~BwcJI7qnlu0vU9tHkugJXRzNB6QnHunTXVMF2H2C1VknA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
+      alt=""
+      srcset=""
+    />
+    <a
+      href="home/home.html"
+      rel="noopener noreferrer"
+      style="text-decoration: none"
+      >GAS KUY</a
+    >
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
