costumization home menu.

--- a/home/home.html
+++ b/home/home.html
@@ -93,22 +93,111 @@
                   </div>
                 </div>
               </div>
-              <div class="graph-menu bd-highlight">
-                <div
-                  class="d-flex flex-row bd-highlight mb-3"
-                  style="background-color: black"
-                >
-                  <div class="items p-2 bd-highlight">Flex item 1</div>
-                  <div class="items p-2 bd-highlight">Flex item 2</div>
+              <div class="graph-menu d-flex flex-row bd-highlight">
+                <div class="item-1 p-2 bd-highlight">Flex item 1</div>
+                <div class="item-2 p-2 bd-highlight">
+                  <div class="row item-content">
+                    <div class="item-content-title col-sm-8" style="padding: 0">
+                      Transaction History
+                    </div>
+                    <div class="col-sm-4" style="padding: 0; text-align: right">
+                      <a href=""> See all </a>
+                    </div>
+                  </div>
+                  <div class="row item-content align-items-center">
+                    <div class="col-sm-8" style="padding-right: 0">
+                      <div class="row align-items-center">
+                        <img
+                          class="col-4"
+                          src="../asset/home/1.png"
+                          alt=""
+                          style="padding: 0"
+                        />
+                        <div class="col-8">
+                          <div class="row">
+                            <div class="item-content-name col">Samuel Suhi</div>
+                            <div class="w-100"></div>
+                            <div class="item-content-status col">Transfer</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="trans col-sm-4" style="color: #1ec15f">
+                      +Rp.50.000
+                    </div>
+                  </div>
+                  <div class="row item-content align-items-center">
+                    <div class="col-sm-8" style="padding-right: 0">
+                      <div class="row align-items-center">
+                        <div class="col-4" style="align-items: center">
+                          <img src="../asset/home/image 1.png" alt="" />
+                        </div>
+                        <div class="col-8">
+                          <div class="row">
+                            <div class="item-content-name col">Netflix</div>
+                            <div class="w-100"></div>
+                            <div class="item-content-status col">
+                              Subscription
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="trans col-sm-4" style="color: #ff5b37">
+                      -Rp.149.000
+                    </div>
+                  </div>
+                  <div class="row item-content align-items-center">
+                    <div class="col-sm-8" style="padding-right: 0">
+                      <div class="row align-items-center">
+                        <img
+                          class="col-4"
+                          src="../asset/home/2.png"
+                          alt=""
+                          style="padding: 0"
+                        />
+                        <div class="col-8">
+                          <div class="row">
+                            <div class="item-content-name col">
+                              Christine Mar...
+                            </div>
+                            <div class="w-100"></div>
+                            <div class="item-content-status col">Transfer</div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="trans col-sm-4" style="color: #1ec15f">
+                      +Rp.150.000
+                    </div>
+                  </div>
+                  <div class="row item-content align-items-center">
+                    <div class="col-sm-8" style="padding-right: 0">
+                      <div class="row align-items-center">
+                        <div class="col-4" style="align-items: center">
+                          <img src="../asset/home/image 3.png" alt="" />
+                        </div>
+                        <div class="col-8">
+                          <div class="row">
+                            <div class="item-content-name col">Adobe Inc.</div>
+                            <div class="w-100"></div>
+                            <div class="item-content-status col">
+                              Subscription
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="trans col-sm-4" style="color: #ff5b37">
+                      -Rp.249.000
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="bar bd-highlight pl-3 pr-2 mb-3">
-            <div
-              class="d-flex flex-column bd-highlight mb-2"
-              style="height: 700px"
-            >
+            <div class="d-flex flex-column bd-highlight" style="height: 700px">
               <a
                 href="/dasboard/dasboard.html"
                 class="align-self-baseline"
@@ -187,7 +276,7 @@
               </a>
               <a
                 href="/index.html"
-                class="mt-auto align-self-baseline"
+                class="mt-auto mb-2 align-self-baseline"
                 style="text-decoration: none"
               >
                 <div class="bar-menu-bot p-2 bd-highlight d-flex">
