adding success page in confirmation file.

--- a/Wallet.html
+++ b/Wallet.html
@@ -3,43 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyWallet</title>
+    <title>Document</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="Wallet.css" />
   </head>
-
   <body>
     <div class="container">
-      <nav class="navbar navbar-light bg-light d-flex bd-highlight">
-        <div class="p-2 flex-grow-1 bd-highlight">ZWallet</div>
-        <div class="p-2 bd-highlight">Foto</div>
-        <div class="p-2 bd-highlight d-flex flex-column bd-highlight mb-3">
-          <div class="p-2 bd-highlight">Robert Chandler</div>
-          <div class="p-2 bd-highlight">+62 8139 3877 7946</div>
+      <header class="row">
+        <div class="navbar" style="height: 100px">
+          <div></div>
         </div>
-        <div class="p-2 bd-highlight">Foto</div>
-      </nav>
+      </header>
+      <div class="body-container"></div>
+      <footer></footer>
     </div>
-
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
+
+body>container>
