--- a/success/success.html
+++ b/success/success.html
@@ -46,162 +46,73 @@
       <!-- start body -->
       <div class="container-body">
         <div class="d-flex flex-row-reverse bd-highlight">
-          <div
-            class="content flex-grow-1 bd-highlight mb-3"
-            style="background-color: brown"
-          >
-            <!-- content Dashboard-->
-            <!-- <div class="d-flex flex-column bd-highlight" style="height: 700px">
-              <div class="content-menu bd-highlight">
-                <div class="d-flex bd-highlight" style="height: 100%">
-                  <div class="p-2 flex-grow-1 bd-highlight align-self-center">
-                    <div class="d-flex flex-column bd-highlight ml-3">
-                      <div class="balance p-2 flex-fill bd-highlight">
-                        Balance
-                      </div>
-                      <div class="rupiah p-2 flex-md-fill bd-highlight">
-                        Rp. 120.000
-                      </div>
-                      <div class="nope p-2 flex-fill bd-highlight">
-                        +62 813 1464 6445
-                      </div>
-                    </div>
-                  </div>
-                  <div class="p-2 bd-highlight mr-3 align-self-center">
-                    <div class="d-flex flex-column bd-highlight">
-                      <div class="balance p-2 flex-fill bd-highlight">
-                        <button
-                          type="button"
-                          class="link-content btn btn-outline-light"
-                        >
-                          <img
-                            src="../asset/home/arrow-up.png"
-                            alt=""
-                            srcset=""
-                          /><span class="pr-1"> Transfer </span>
-                        </button>
-                      </div>
-                      <div class="nope p-2 flex-fill bd-highlight">
-                        <button
-                          type="button"
-                          class="link-content btn btn-outline-light"
-                        >
-                          <img
-                            src="../asset/home/plus.png"
-                            alt=""
-                            srcset=""
-                          /><span class="pr-3"> Top Up </span>
-                        </button>
-                      </div>
-                    </div>
-                  </div>
+          <div class="content flex-grow-1 bd-highlight mb-3 container">
+            <div class="bar-title col">Transfer To</div>
+            <div class="w-100"></div>
+            <div class="col">
+              <div class="content-value-top d-flex flex-row">
+                <img
+                  src="../asset/history/1.png"
+                  class="img-search align-self-center"
+                  alt=""
+                  srcset=""
+                />
+                <div class="p-3 d-flex flex-column align-self-center">
+                  <div class="name-search my-1">Samuel Suhi</div>
+                  <div class="no-search">+62 813-8492-9994</div>
                 </div>
               </div>
-              <div class="graph-menu d-flex flex-row bd-highlight">
-                <div class="item-1 p-2 bd-highlight">Flex item 1</div>
-                <div class="item-2 p-2 bd-highlight">
-                  <div class="row item-content">
-                    <div class="item-content-title col-sm-8" style="padding: 0">
-                      Transaction History
-                    </div>
-                    <div class="col-sm-4" style="padding: 0; text-align: right">
-                      <a href=""> See all </a>
-                    </div>
-                  </div>
-                  <div class="row item-content align-items-center">
-                    <div class="col-sm-8" style="padding-right: 0">
-                      <div class="row align-items-center">
-                        <img
-                          class="col-4"
-                          src="../asset/home/1.png"
-                          alt=""
-                          style="padding: 0"
-                        />
-                        <div class="col-8">
-                          <div class="row">
-                            <div class="item-content-name col">Samuel Suhi</div>
-                            <div class="w-100"></div>
-                            <div class="item-content-status col">Transfer</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="trans col-sm-4" style="color: #1ec15f">
-                      +Rp.50.000
-                    </div>
-                  </div>
-                  <div class="row item-content align-items-center">
-                    <div class="col-sm-8" style="padding-right: 0">
-                      <div class="row align-items-center">
-                        <div class="col-4" style="align-items: center">
-                          <img src="../asset/home/image 1.png" alt="" />
-                        </div>
-                        <div class="col-8">
-                          <div class="row">
-                            <div class="item-content-name col">Netflix</div>
-                            <div class="w-100"></div>
-                            <div class="item-content-status col">
-                              Subscription
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="trans col-sm-4" style="color: #ff5b37">
-                      -Rp.149.000
-                    </div>
-                  </div>
-                  <div class="row item-content align-items-center">
-                    <div class="col-sm-8" style="padding-right: 0">
-                      <div class="row align-items-center">
-                        <img
-                          class="col-4"
-                          src="../asset/home/2.png"
-                          alt=""
-                          style="padding: 0"
-                        />
-                        <div class="col-8">
-                          <div class="row">
-                            <div class="item-content-name col">
-                              Christine Mar...
-                            </div>
-                            <div class="w-100"></div>
-                            <div class="item-content-status col">Transfer</div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="trans col-sm-4" style="color: #1ec15f">
-                      +Rp.150.000
-                    </div>
-                  </div>
-                  <div class="row item-content align-items-center">
-                    <div class="col-sm-8" style="padding-right: 0">
-                      <div class="row align-items-center">
-                        <div class="col-4" style="align-items: center">
-                          <img src="../asset/home/image 3.png" alt="" />
-                        </div>
-                        <div class="col-8">
-                          <div class="row">
-                            <div class="item-content-name col">Adobe Inc.</div>
-                            <div class="w-100"></div>
-                            <div class="item-content-status col">
-                              Subscription
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="trans col-sm-4" style="color: #ff5b37">
-                      -Rp.249.000
-                    </div>
-                  </div>
+            </div>
+            <div class="bar-detail col">Details</div>
+            <div class="w-100"></div>
+            <div class="col">
+              <div class="content-value d-flex flex-row">
+                <div class="content-menu d-flex flex-column align-self-center">
+                  <div class="no-search">Amount</div>
+                  <div class="name-search my-2">Rp.100.000</div>
                 </div>
               </div>
-            </div> -->
+            </div>
+            <div class="w-100"></div>
+            <div class="col">
+              <div class="content-value d-flex flex-row">
+                <div class="content-menu d-flex flex-column align-self-center">
+                  <div class="no-search">Balance Left</div>
+                  <div class="name-search my-2">Rp.20.000</div>
+                </div>
+              </div>
+            </div>
+            <div class="w-100"></div>
+            <div class="col">
+              <div class="content-value d-flex flex-row">
+                <div class="content-menu d-flex flex-column align-self-center">
+                  <div class="no-search">Date & Time</div>
+                  <div class="name-search my-2">May 11,2020 - 12.20</div>
+                </div>
+              </div>
+            </div>
+            <div class="w-100"></div>
+            <div class="col">
+              <div class="content-value d-flex flex-row">
+                <div class="content-menu d-flex flex-column align-self-center">
+                  <div class="no-search">Notes</div>
+                  <div class="name-search my-2">For buying some socks</div>
+                </div>
+              </div>
+            </div>
 
-            <!-- end content Dashboard -->
+            <div class="w-100"></div>
+            <div class="col row justify-content-end button-menu">
+              <button
+                class="button-next align-self-center"
+                data-toggle="modal"
+                data-target="#modal-id"
+              >
+                Continue
+              </button>
+            </div>
           </div>
+
           <div class="bar bd-highlight pl-3 pr-2 mb-3">
             <div class="d-flex flex-column bd-highlight" style="height: 700px">
               <a
