costumization success menu

--- a/success/success.html
+++ b/success/success.html
@@ -47,23 +47,18 @@
       <div class="container-body">
         <div class="d-flex flex-row-reverse bd-highlight">
           <div class="content flex-grow-1 bd-highlight mb-3 container">
-            <div class="bar-title col">Transfer To</div>
-            <div class="w-100"></div>
-            <div class="col">
-              <div class="content-value-top d-flex flex-row">
+            <div class="row">
+              <div class="col content-img-success">
                 <img
-                  src="../asset/history/1.png"
-                  class="img-search align-self-center"
+                  src="../asset/success/success.png"
                   alt=""
                   srcset=""
+                  class="img-success"
                 />
-                <div class="p-3 d-flex flex-column align-self-center">
-                  <div class="name-search my-1">Samuel Suhi</div>
-                  <div class="no-search">+62 813-8492-9994</div>
-                </div>
               </div>
+              <div class="w-100"></div>
+              <div class="bar-detail col">Transfer Success</div>
             </div>
-            <div class="bar-detail col">Details</div>
             <div class="w-100"></div>
             <div class="col">
               <div class="content-value d-flex flex-row">
@@ -100,16 +95,35 @@
                 </div>
               </div>
             </div>
-
             <div class="w-100"></div>
-            <div class="col row justify-content-end button-menu">
-              <button
-                class="button-next align-self-center"
-                data-toggle="modal"
-                data-target="#modal-id"
-              >
-                Continue
+            <div class="bar-title col">Transfer To</div>
+            <div class="w-100"></div>
+            <div class="col">
+              <div class="content-value-top d-flex flex-row">
+                <img
+                  src="../asset/history/1.png"
+                  class="img-search align-self-center"
+                  alt=""
+                  srcset=""
+                />
+                <div class="p-2 d-flex flex-column align-self-center">
+                  <div class="name-search my-1">Samuel Suhi</div>
+                  <div class="no-search">+62 813-8492-9994</div>
+                </div>
+              </div>
+            </div>
+            <div class="w-100"></div>
+            <div class="btn-successful col row justify-content-end button-menu">
+              <button class="button-next-share align-self-center px-2">
+                <img src="../asset/success/share-2.png" alt="" />
               </button>
+              <button class="button-img-download align-self-center mx-3">
+                <img src="../asset/success/download.png" alt="" class="mx-1" />
+                <span class="btn-text"> Download PDF</span>
+              </button>
+              <a href="../home/home.html" class="align-self-center">
+                <button class="button-next">Back to Home</button>
+              </a>
             </div>
           </div>
 
