adding login menu

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Login</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -13,22 +13,22 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <img
-      src="https://s3-alpha-sig.figma.com/img/db44/172b/b318149c7f549c6fc9c884e9370c806f?Expires=1601251200&Signature=Ov5RhwMuGbsCiKxyRztZRNgIS-AykfhcH7sZ5GDhUFEomEZux0xbN8zkBW0jeRVSWNBJ9zTLW8Olbbiwo7XTXyzrhNkxxHNcrRdAii4IXjjK4Uiiejg~BTyAGz~T6RjlKUPQQMZgs4cf0Bt3K6-eUA4B94d0BqlTLYy-fmEy~CcCX7VeA8B6PCnr81JhsE8f62XJ~dL8Q-casr7uL5dfJB9F7gp4B~nMYu4IUekFBm-IV-JSzDLLfSYP8C~a3M5gTK8j7rnXQ5DONNKK-WYsoVGgJ9A0nKHLs-9RjxRazMBLStjyynguUIhzg7bGTDfuvfymIAPA6b0Dey3Xjj7MRg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-      alt=""
-      srcset=""
-    />
-    <img
-      src="https://s3-alpha-sig.figma.com/img/0253/68e5/c034d6526d38685ebd1c9f3d74b6819a?Expires=1601251200&Signature=eUXOezZxnd0UYPbxLSkyjxonVcKleqjl8Raq7BIFNI6uqv30MQBBtn5XVWunu6OAaPzIAtgjeM~3e5Fl~Ttp1Far2HW-7k3RR1AV94cYVDhCaJGUPSt326KrIoIBKAoGLVbg40PIvlVVQmGX81TTDnN47SC6fypMk14M3zlhSjnXBNZxMovl1ElF~vncFgroMeHL9WOtLizhMqV2AXH1~fVMMSQhM3WjzilHakt3UXnUmOXysnFYwapXyx0EXcorrRDZWO~nbGbx9u9bk6xYmuVBj8cY8Bctx-zNALI6~BwcJI7qnlu0vU9tHkugJXRzNB6QnHunTXVMF2H2C1VknA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"
-      alt=""
-      srcset=""
-    />
-    <a
-      href="home/home.html"
-      rel="noopener noreferrer"
-      style="text-decoration: none"
-      >GAS KUY</a
-    >
+    <div class="container-fluid mx-0 bg-white">
+      <div class="row">
+        <div class="fiture col-7 p-0">
+          <div class="row">
+            <div class="col">col</div>
+            <div class="w-100"></div>
+            <div class="col">col</div>
+            <div class="w-100"></div>
+            <div class="col">col</div>
+            <div class="w-100"></div>
+            <div class="col">col</div>
+          </div>
+        </div>
+        <div class="col-5 bg-warning">2 of 2</div>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
