--- a/success/success.html
+++ b/success/success.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME</title>
+    <title>Transfer Success</title>
     <link rel="stylesheet" href="success.css" />
     <link
       rel="stylesheet"
