--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME</title>
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="template.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -46,8 +46,12 @@
       <!-- start body -->
       <div class="container-body">
         <div class="d-flex flex-row-reverse bd-highlight">
-          <div class="content flex-grow-1 bd-highlight mb-3">
-            <div class="d-flex flex-column bd-highlight" style="height: 700px">
+          <div
+            class="content flex-grow-1 bd-highlight mb-3"
+            style="background-color: brown"
+          >
+            <!-- content Dashboard-->
+            <!-- <div class="d-flex flex-column bd-highlight" style="height: 700px">
               <div class="content-menu bd-highlight">
                 <div class="d-flex bd-highlight" style="height: 100%">
                   <div class="p-2 flex-grow-1 bd-highlight align-self-center">
@@ -101,7 +105,7 @@
                       Transaction History
                     </div>
                     <div class="col-sm-4" style="padding: 0; text-align: right">
-                      <a href="/history/history.html"> See all </a>
+                      <a href=""> See all </a>
                     </div>
                   </div>
                   <div class="row item-content align-items-center">
@@ -194,14 +198,14 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
+            </div> -->
 
-          <!-- Menu Bar -->
+            <!-- end content Dashboard -->
+          </div>
           <div class="bar bd-highlight pl-3 pr-2 mb-3">
             <div class="d-flex flex-column bd-highlight" style="height: 700px">
               <a
-                href="/home/home.html"
+                href="/dasboard/dasboard.html"
                 class="align-self-baseline"
                 style="text-decoration: none"
               >
@@ -220,7 +224,7 @@
                 </div>
               </a>
               <a
-                href="/search/search.html"
+                href="/transfer/transfer.html"
                 class="align-self-baseline"
                 style="text-decoration: none"
               >
@@ -297,7 +301,6 @@
               </a>
             </div>
           </div>
-          <!-- End Menu Bar -->
         </div>
       </div>
 
