--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
     <div class="container-fluid mx-0 bg-white">
       <div class="row">
         <div class="fiture col-7 p-0">
-          <div class="row">
-            <div class="col">col</div>
-            <div class="w-100"></div>
-            <div class="col">col</div>
-            <div class="w-100"></div>
-            <div class="col">col</div>
-            <div class="w-100"></div>
-            <div class="col">col</div>
+          <h4>Zwallet</h4>
+          <img
+            src="./asset/login/bg-img.png"
+            alt=""
+            srcset=""
+            class="img-content"
+          />
+          <div class="font-weight-bold">App that Covering Banking Needs.</div>
+          <div class="font-weight">
+            Zwallet is an application that focussing in banking needs for all
+            users in the world. Always updated and always following world
+            trends. 5000+ users registered in Zwallet everyday with worldwide
+            users coverage.
           </div>
         </div>
-        <div class="col-5 bg-warning">2 of 2</div>
+        <div class="col-5 bg-warning"></div>
       </div>
     </div>
 
