--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
   </head>
   <body class="bg-third d-flex flex-column justify-content-lg-between">
     <!-- Navbar -->
-    <nav class="bg-white py-4">
+    <nav class="bg-white py-4 pl-2">
       <div class="container">
         <div class="d-flex justify-content-between align-items-center">
           <h3 class="text-primary m-0">ZWallet</h3>
@@ -40,7 +40,7 @@
     <!-- End Nav -->
 
     <!-- Content -->
-    <div class="container my-5">
+    <div class="container my-lg-5 my-4">
       <div class="row">
         <div class="col-lg-3 pr-lg-2">
           <div
