--- a/index.html
+++ b/index.html
@@ -16,23 +16,79 @@
   <body>
     <div class="container-fluid mx-0 bg-white">
       <div class="row">
-        <div class="fiture col-6 p-5">
-          <h4>Zwallet</h4>
-          <img
-            src="./asset/login/bg-img.png"
-            alt=""
-            srcset=""
-            class="img-content"
-          />
-          <div class="font-weight-bold">App that Covering Banking Needs.</div>
-          <div class="font-weight">
+        <div class="fiture col-7 p-5">
+          <h4 class="text-white text-nuni txt-bold">Zwallet</h4>
+          <div class="d-flex justify-content-center">
+            <img
+              src="./asset/login/bg-img.png"
+              alt=""
+              srcset=""
+              class="img-content"
+            />
+          </div>
+          <div class="font-weight-bold text-nuni text-white mb-3">
+            App that Covering Banking Needs.
+          </div>
+          <div class="font-weight text-nuni text-white small">
             Zwallet is an application that focussing in banking needs for all
             users in the world. Always updated and always following world
             trends. 5000+ users registered in Zwallet everyday with worldwide
             users coverage.
           </div>
         </div>
-        <div class="col-6 bg-warning"></div>
+        <div class="col-5 bg-white">
+          <div class="d-flex flex-column justify-content-around p-5 h-100">
+            <div class="text-nuni-lg txt-bold mt-5">
+              Start Accessing Banking Needs With All Devices and All Platforms
+              With 30.000+ Users
+            </div>
+            <div class="small text-nuni txt-third mt-3">
+              Transfering money is eassier than ever, you can access Zwallet
+              wherever you are. Desktop, laptop, mobile phone? we cover all of
+              that for you!
+            </div>
+            <div class="d-flex flex-row input-login mx-2 mt-4">
+              <img src="asset/login/mail.png" alt="" class="p-1" />
+              <input
+                type="text"
+                class="input-login-value"
+                placeholder="Enter your e-mail"
+                width="20"
+                height="14"
+              />
+            </div>
+            <div
+              class="d-flex flex-row input-login mx-2 mt-4 justify-content-lg-between"
+            >
+              <div>
+                <img src="asset/login/lock.png" alt="" class="p-1" />
+                <input
+                  type="text"
+                  class="input-login-value"
+                  placeholder="Enter your password"
+                />
+              </div>
+              <div class="my-2">
+                <img src="asset/login/eye-crossed.png" alt="" />
+              </div>
+            </div>
+            <div class="d-flex flex-row justify-content-end mt-1">
+              <div class="small">Forgot password?</div>
+            </div>
+            <a
+              href="home.html"
+              class="btn btn-login mt-5 p-3 txt-bold text-nuni justify-content-lg-center"
+            >
+              Login</a
+            >
+            <div class="d-flex justify-content-lg-center">
+              <div class="small m-0 p-0">
+                Don’t have an account? Let’s
+                <a href="#" class="text-decoration-none">Sign Up</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
